Fix image height, make one image disappear on mobile screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,13 +120,9 @@ header a {
 }
 
 /* Grid Area (Main Content) */
-
-.signup-module {
-
-}
-.img-container {
-    width: 200px;
-    height: 400px;
+img.img-fluid {
+    height: 100%;
+    object-fit: cover;
 }
 
 
